convert to uig4, implement breadcrumbs

--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
     "@workmarket/front-end-components": "10.3.2",
     "@workmarket/front-end-patterns": "^4.18.2",
     "@workmarket/hunk": "^1.0.1",
-    "@workmarket/js-utils": "^3.2.1",
-    "@workmarket/koopa": "^3.0.0",
+    "@workmarket/js-utils": "4",
     "@workmarket/lolz": "^6.1.1",
     "@workmarket/sherpa": "^0.1.0",
     "@workmarket/ui-configs": "^1.1.1",
-    "@workmarket/ui-generation": "3.0.0-alpha.54-rc9",
+    "@workmarket/ui-generation": "4.0.0-alpha.3-camden-fork",
     "@workmarket/wm-babel-preset": "^0.1.1",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
