--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "license": "UNLICENSED",
   "description": "WorkMarket Packages",
   "scripts": {
-    "start": "NODE_ENV=development BABEL_ENV=development BASE_API_URL=api-gtw.dev.workmarket.com ./node_modules/.bin/webpack-dev-server",
-    "start:api": "good_job",
+    "start": "NODE_ENV=development BABEL_ENV=development BASE_API_URL=https://localhost:9005 ./node_modules/.bin/webpack-dev-server",
+    "start:api": "BASE_API_URL=https://localhost:9005 good_job",
+    "start:proxy": "node proxy/https-proxy.js",
     "build": "NODE_ENV=production BABEL_ENV=build make build",
     "lint": "eslint ./src"
   },
   "dependencies": {
-    "@workmarket/front-end-components": "10.3.2",
+    "@workmarket/front-end-components": "11.0.0",
     "@workmarket/front-end-patterns": "^4.18.2",
     "@workmarket/hunk": "^1.0.1",
     "@workmarket/js-utils": "4",
@@ -59,6 +60,10 @@
   },
   "devDependencies": {
     "@workmarket/projekt_good_job": "^8.0.5",
-    "r2": "^2.0.0"
+    "chalk": "^2.3.2",
+    "http-proxy": "^1.16.2",
+    "json-server": "^0.12.1",
+    "r2": "^2.0.0",
+    "url": "^0.11.0"
   }
 }
