--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "license": "UNLICENSED",
   "description": "WorkMarket Packages",
   "scripts": {
-    "start": "NODE_ENV=development BABEL_ENV=development BASE_API_URL=https://localhost:9005 ./node_modules/.bin/webpack-dev-server",
-    "start:api": "BASE_API_URL=https://localhost:9005 good_job",
+    "start": "NODE_ENV=development BABEL_ENV=development ./node_modules/.bin/webpack-dev-server",
+    "start:local-gateway": "NODE_ENV=development BABEL_ENV=development BASE_API_URL=https://localhost:7777 ./node_modules/.bin/webpack-dev-server",
+    "start:api": "good_job",
+    "start:api-local-gateway": "NODE_TLS_REJECT_UNAUTHORIZED=0 BASE_API_URL=https://localhost:7777 good_job",
     "start:proxy": "node proxy/https-proxy.js",
     "build": "NODE_ENV=production BABEL_ENV=build make build",
     "lint": "eslint ./src"
@@ -61,8 +63,8 @@
   "devDependencies": {
     "@workmarket/projekt_good_job": "^8.0.5",
     "chalk": "^2.3.2",
+    "http-parser-js": "^0.4.11",
     "http-proxy": "^1.16.2",
-    "json-server": "^0.12.1",
     "r2": "^2.0.0",
     "url": "^0.11.0"
   }
