--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "swagger-client": "^3.1.0",
-    "url-loader": "^0.5.9"
+    "url-loader": "^0.5.9",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "@workmarket/projekt_good_job": "^8.0.5",
